feat: check connection and show noti

--- a/index.html
+++ b/index.html
@@ -21,19 +21,18 @@
 
     <!-- Styles -->
     <link rel="stylesheet" href="styles.css" />
+
+    <script src="./script.js" defer></script>
     <title>Internet Connection Notification</title>
   </head>
   <body>
     <div class="popup">
       <div class="icon-col">
-        <div class="icon"><i class="uil uil-wifi-slash"></i></div>
+        <i class="uil uil-wifi-slash"></i>
       </div>
       <div class="details">
-        <h2 class="title">Lost Connection</h2>
-        <p class="desc">
-          Your connection is unavailable. We will attempt to reconnect you in
-          <b>10</b> seconds.
-        </p>
+        <h2 class="title"></h2>
+        <p class="desc"></p>
         <button class="btn-reconnect">Reconnect Now</button>
       </div>
     </div>
